--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 	--font-display: "Inter" , "Anuphan", "s ans-serif";
 }
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @layer base {
 	html, body {
 		@apply bg-gray-50 text-gray-800 dark:bg-gray-950 dark:text-gray-100;
